HV-1831 A few cleanups
Signed-off-by: marko-bekhta <marko.prykladna@gmail.com>